nginx/src/v16_k8s/simple-nginx-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: simple-nginx
  template:
    metadata:
      labels:
        component: simple-nginx
    spec:
      containers:
        - name: simple-nginx
          image: marco27/simple-nginx:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
