nginx/src/v16_k8s/simple-nginx-node-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx-node-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: simple-nginx
  ports:
    - port: 8080
      targetPort: 8080
