nginx/src/v16_k8s/simple-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: simple-nginx-cluster-ip-service
                port:
                  number: 80
          - path: /app?(.*)
            pathType: Prefix
            backend:
              service:
                name: simple-nginx-node-cluster-ip-service
                port:
                  number: 8080
